complete except image

--- a/app/libs/css/config.less
+++ b/app/libs/css/config.less
@@ -33,6 +33,10 @@
   margin-left: @slef/@remSize*1rem;
 }
 
+.margin(@px) {
+  margin: @px/@remSize*1rem;
+}
+
 .margin2(@vertical, @horizontal) {
   margin: @vertical/@remSize*1rem @horizontal/@remSize*1rem;
 }
